--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,12 @@ https://templatemo.com/tm-556-catalog-z
             
             <input type="file" name="file" class="form-control tm-search-input" autocomplete="off" required>
             <button class="btn btn-outline-success tm-search-btn" type="submit">
-                <i class="fas fa-search"></i>
-                
+            <i class="fas fa-search"></i>
             </button>
+
+            <label for="exampleDataList" class="form-label">Số lượng</label>
+            <input class="form-control" list="datalistOptions" id="exampleDataList" name="num" placeholder="Nhập số lượng ảnh muốn hiển thị" type="text">
+
         </form>
     </div>
 
