--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-556-catalog-z
             <i class="fas fa-search"></i>
             </button>
 
-            <label for="exampleDataList" class="form-label">Số lượng</label>
+            <!-- <label for="exampleDataList" class="form-label">Số lượng</label> -->
             <input class="form-control" list="datalistOptions" id="exampleDataList" name="num" placeholder="Nhập số lượng ảnh muốn hiển thị" type="text">
 
         </form>
