--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-556-catalog-z
             </button>
 
             <!-- <label for="exampleDataList" class="form-label">Số lượng</label> -->
-            <input class="form-control" list="datalistOptions" id="exampleDataList" name="num" placeholder="Nhập số lượng ảnh muốn hiển thị" type="text">
+            <input class="form-control" list="datalistOptions" id="exampleDataList" name="num" placeholder="Nhập số lượng ảnh muốn hiển thị" type="text" style="margin-left: 60px;">
 
         </form>
     </div>
